@@ -1,0 +1,34 @@
+# ==============================================================================
+# 位置：/etc/hosts
+# ==============================================================================
+
+# ==============================================================================
+# 回环
+# ==============================================================================
+127.0.0.1         localhost.localdomain         localhost
+::1               localhost.localdomain         localhost
+# ==============================================================================
+
+# ==============================================================================
+# 我的
+# ==============================================================================
+133.130.101.63    vps.i
+192.168.1.1       gate.home.i
+192.168.10.1      gete.nest.i
+# ==============================================================================
+
+# ==============================================================================
+# 公司
+# ==============================================================================
+192.168.80.1      gate.we
+121.69.10.26      vpn.we
+192.168.80.119    ppc.box.we
+192.168.80.25     x86.box.we
+192.168.80.71     git.we
+# ==============================================================================
+
+# ==============================================================================
+# 旧的
+# ==============================================================================
+# ==============================================================================
+
